@@ -11,6 +11,10 @@ EAPI Eo_Op ELM_OBJ_SCROLLER_BASE_ID = EO_NOOP;
 #define MY_CLASS_NAME "elm_scroller"
 
 static const char SIG_SCROLL[] = "scroll";
+static const char SIG_SCROLL_LEFT[] = "scroll,left";
+static const char SIG_SCROLL_RIGHT[] = "scroll,right";
+static const char SIG_SCROLL_UP[] = "scroll,up";
+static const char SIG_SCROLL_DOWN[] = "scroll,down";
 static const char SIG_SCROLL_ANIM_START[] = "scroll,anim,start";
 static const char SIG_SCROLL_ANIM_STOP[] = "scroll,anim,stop";
 static const char SIG_SCROLL_DRAG_START[] = "scroll,drag,start";
@@ -28,6 +32,10 @@ static const char SIG_HBAR_UNPRESS[] = "hbar,unpress";
 static const Evas_Smart_Cb_Description _smart_callbacks[] =
 {
    {SIG_SCROLL, ""},
+   {SIG_SCROLL_LEFT, ""},
+   {SIG_SCROLL_RIGHT, ""},
+   {SIG_SCROLL_UP, ""},
+   {SIG_SCROLL_DOWN, ""},
    {SIG_SCROLL_ANIM_START, ""},
    {SIG_SCROLL_ANIM_STOP, ""},
    {SIG_SCROLL_DRAG_START, ""},
@@ -536,6 +544,34 @@ _scroll_cb(Evas_Object *obj,
 }
 
 static void
+_scroll_left_cb(Evas_Object *obj,
+           void *data __UNUSED__)
+{
+   evas_object_smart_callback_call(obj, SIG_SCROLL_LEFT, NULL);
+}
+
+static void
+_scroll_right_cb(Evas_Object *obj,
+           void *data __UNUSED__)
+{
+   evas_object_smart_callback_call(obj, SIG_SCROLL_RIGHT, NULL);
+}
+
+static void
+_scroll_up_cb(Evas_Object *obj,
+           void *data __UNUSED__)
+{
+   evas_object_smart_callback_call(obj, SIG_SCROLL_UP, NULL);
+}
+
+static void
+_scroll_down_cb(Evas_Object *obj,
+           void *data __UNUSED__)
+{
+   evas_object_smart_callback_call(obj, SIG_SCROLL_DOWN, NULL);
+}
+
+static void
 _scroll_anim_start_cb(Evas_Object *obj,
                       void *data __UNUSED__)
 {
@@ -735,6 +771,10 @@ _elm_scroller_smart_add(Eo *obj, void *_pd, va_list *list EINA_UNUSED)
          elm_scrollable_interface_edge_top_cb_set(_edge_top_cb),
          elm_scrollable_interface_edge_bottom_cb_set(_edge_bottom_cb),
          elm_scrollable_interface_scroll_cb_set(_scroll_cb),
+         elm_scrollable_interface_scroll_left_cb_set(_scroll_left_cb),
+         elm_scrollable_interface_scroll_right_cb_set(_scroll_right_cb),
+         elm_scrollable_interface_scroll_up_cb_set(_scroll_up_cb),
+         elm_scrollable_interface_scroll_down_cb_set(_scroll_down_cb),
          elm_scrollable_interface_animate_start_cb_set(_scroll_anim_start_cb),
          elm_scrollable_interface_animate_stop_cb_set(_scroll_anim_stop_cb),
          elm_scrollable_interface_drag_start_cb_set(_scroll_drag_start_cb),
